# fini

./: Makefile  README.md  main.py  pyproject.toml
src/fini/: __init__.py  _config.py  _config_test.py  _files.py  _files_test.py  main_argparse.py  main_typer.py
src/fini/edit/: _edit.py
src/fini/rollover/: _rollover.py  _rollover_test.py
src/fini/rollover/test_data/complex/: expected_out.md  in.md
src/fini/rollover/test_data/numbered_list/: expected_out.md  in.md
src/fini/rollover/test_data/some_done/: expected_out.md  in.md
src/fini/sync/: _sync.py  _sync_test.py
