[project]
name = "fini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alexjuda", email = "alexanderjuda@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
fini = "fini:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "pytest>=8.3.5",
]
