[project]
name = "fini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alexjuda", email = "alexanderjuda@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
]

[project.scripts]
fini = "fini:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
